# bevy_asset_loader

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  ideas.md
.github/actions/prepare/: action.yaml
.github/workflows/: ci.yml
bevy_asset_loader/: Cargo.toml
bevy_asset_loader/assets/: collection_loading.assets.ron  custom.assets  custom.map.ron  custom.my-assets  custom.my-assets.ron  dynamic_asset.assets  dynamic_asset.assets.ron  dynamic_asset_arrays.asset_arrays.ron  dynamic_asset_ron.assets  full_dynamic_collection.assets.ron  my.assets
bevy_asset_loader/assets/levels/: desert.assets.ron  forest.assets.ron
bevy_asset_loader/assets/test/: first.test.ron  second.test.ron
bevy_asset_loader/examples/: README.md  asset_maps.rs  atlas_from_grid.rs  color_material.rs  configure_loading_state.rs  custom_dynamic_assets.rs  custom_dynamic_assets_map.rs  dynamic_asset.rs  dynamic_asset_arrays.rs  dynamic_asset_ron.rs  dynamic_collection.rs  failure_state.rs  finally_init_resource.rs  full_collection.rs  full_collection_init.rs  full_collection_no_states.rs  full_dynamic_collection.rs  image_asset.rs  init_resource.rs  insert_resource.rs  levels.rs  load_folder_as_map.rs  manual_dynamic_asset.rs  no_loading_state.rs  progress_tracking.rs  stageless.rs  stageless_dynamic_asset.rs  stageless_dynamic_ron.rs  stageless_failure_state.rs  stageless_full_collection.rs  stageless_full_dynamic_collection.rs  stageless_manual_dynamic_asset.rs  stageless_progress.rs  standard_material.rs  sub_state.rs  two_collections.rs
bevy_asset_loader/src/: asset_collection.rs  asset_loader.rs  dynamic_asset.rs  lib.rs  loading.rs  loading_state.rs  mapped.rs  rewrite.rs  standard_dynamic_asset.rs  systems.rs
bevy_asset_loader/src/asset_loader/: dynamic_asset.rs  dynamic_asset_systems.rs  systems.rs
bevy_asset_loader/src/asset_loader/stageless/: dynamic_asset_systems.rs  systems.rs
bevy_asset_loader/src/loading_state/: config.rs  dynamic_asset_systems.rs  systems.rs
bevy_asset_loader/src/loading_state/stageless/: dynamic_asset_systems.rs  mod.rs  systems.rs
bevy_asset_loader/tests/: can_run_with_sub_states.rs  can_run_without_next_state.rs  collection_loading.rs  commands_and_state_loading.rs  configure_loading_state_separately.rs  continues_to_failure_state.rs  continues_without_collection.rs  custom_asset_file_path.rs  failure_state_transition.rs  finally_init_resource.rs  init_collection.rs  init_resource.rs  loading_state_reentry.rs  loading_state_with_substates.rs  mapped_path_use_slash.rs  multiple_asset_collections.rs  multiple_loading_states.rs  multiple_states.rs  parallel_loading_states.rs  post_process.rs  reload_dynamic_asset_files.rs  same_collection_multiple_times.rs  single_asset_collection.rs  stageless.rs  ui.rs
bevy_asset_loader/tests/stageless/: can_run_without_next_state.rs  continues_to_failure_state.rs  continues_without_collection.rs  init_resource.rs  multiple_asset_collections.rs  multiple_loading_states.rs
bevy_asset_loader/tests/ui/: errors_on_multiple_fields.rs  errors_on_multiple_fields.stderr  folder_and_path.rs  folder_and_path.stderr  key_and_any_other_attribute.rs  key_and_any_other_attribute.stderr  missing_feature.rs  missing_feature.stderr  missing_impl.rs  missing_impl.stderr  missing_texture_atlas_attributes.rs  missing_texture_atlas_attributes.stderr  no_default.rs  no_default.stderr  non_default.rs  non_default.stderr  tuple.stderr  unknown_attribute.rs  unknown_attribute.stderr  unknown_attribute_type.rs  unknown_attribute_type.stderr  wrong_attribute_type.rs  wrong_attribute_type.stderr
bevy_asset_loader/tests/ui_with_2d_3d_features/: enum.rs  enum.stderr  errors_on_multiple_fields.rs  errors_on_multiple_fields.stderr  key_and_any_other_attribute.rs  key_and_any_other_attribute.stderr  missing_texture_atlas_attributes.rs  missing_texture_atlas_attributes.stderr  tuple.rs  tuple.stderr  unknown_attribute.rs  unknown_attribute.stderr  wrong_attribute_type.rs  wrong_attribute_type.stderr
bevy_asset_loader/tests/ui_with_render_feature/: folder_and_path.stderr  key_and_any_other_attribute.rs  key_and_any_other_attribute.stderr
bevy_asset_loader_derive/: Cargo.toml  README.md
bevy_asset_loader_derive/src/: assets.rs  lib.rs
bevy_asset_loader_dynamic/: Cargo.toml
bevy_asset_loader_dynamic/src/: lib.rs
bevy_assets_loader/: Cargo.toml
bevy_assets_loader/src/: lib.rs
bevy_assets_loader/tests/: single_asset_collection.rs
bevy_assets_loader_derive/: Cargo.toml
src/: lib.rs
tests/: no_assets.rs
