[package]
name = "bevy_asset_loader"
version = "0.12.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Bevy plugin for asset loading"
repository = "https://github.com/NiklasEi/bevy_asset_loader"
homepage = "https://github.com/NiklasEi/bevy_asset_loader"
documentation = "https://docs.rs/bevy_asset_loader"
keywords = ["bevy", "gamedev", "asset", "assets"]
categories = ["game-development"]
readme = "README.md"

[features]
2d = ["bevy/bevy_sprite", "bevy_asset_loader_derive/2d"]
# This feature adds support for bevy's StandardMaterial assets
3d = ["bevy/bevy_pbr", "bevy/bevy_render", "bevy_asset_loader_derive/3d"]
dynamic_assets = ["bevy_common_assets", "serde"]
progress_tracking = ["iyes_progress"]
progress_tracking_stageless = ["iyes_progress/iyes_loopless"]
stageless = ["iyes_loopless"]

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset"] }
bevy_asset_loader_derive = { version = "=0.12.0", path = "../bevy_asset_loader_derive" }
anyhow = "1"

bevy_common_assets = { version = "0.3", features = ["ron"], optional = true }
serde = { version = "1", optional = true }
iyes_progress = { version = "0.4", optional = true }
iyes_loopless = { version = "0.7", optional = true }

[dev-dependencies]
bevy = { version = "0.8", features = ["vorbis"] }
anyhow = "1"
iyes_progress = { version = "0.4" }
iyes_loopless = { version = "0.7" }
bevy_common_assets = { version = "0.3", features = ["ron"] }
serde = { version = "1" }
trybuild = { version = "1.0" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "two_collections"
path = "examples/two_collections.rs"

[[example]]
name = "atlas_from_grid"
path = "examples/atlas_from_grid.rs"
required-features = ["2d"]

[[example]]
name = "init_resource"
path = "examples/init_resource.rs"

[[example]]
name = "manual_dynamic_asset"
path = "examples/manual_dynamic_asset.rs"
required-features = ["dynamic_assets"]

[[example]]
name = "dynamic_asset"
path = "examples/dynamic_asset.rs"
required-features = ["2d", "dynamic_assets"]

[[example]]
name = "no_loading_state"
path = "examples/no_loading_state.rs"

[[example]]
name = "standard_material"
path = "examples/standard_material.rs"
required-features = ["3d"]

[[example]]
name = "progress_tracking"
path = "examples/progress_tracking.rs"
required-features = ["progress_tracking", "2d"]

[[example]]
name = "stageless"
path = "examples/stageless.rs"
required-features = ["stageless"]

[[example]]
name = "stageless_full_collection"
path = "examples/stageless_full_collection.rs"
required-features = ["stageless", "2d", "3d"]

[[example]]
name = "stageless_full_dynamic_collection"
path = "examples/stageless_full_dynamic_collection.rs"
required-features = ["stageless", "2d", "3d", "dynamic_assets"]

[[example]]
name = "stageless_manual_dynamic_asset"
path = "examples/stageless_manual_dynamic_asset.rs"
required-features = ["stageless", "dynamic_assets"]

[[example]]
name = "stageless_progress"
path = "examples/stageless_progress.rs"
required-features = [
  "progress_tracking_stageless",
  "stageless",
  "progress_tracking", "2d"
]

[[example]]
name = "stageless_dynamic_asset"
path = "examples/stageless_dynamic_asset.rs"
required-features = ["2d", "dynamic_assets", "stageless"]

[[example]]
name = "full_collection"
path = "examples/full_collection.rs"
required-features = ["2d", "3d"]

[[example]]
name = "full_dynamic_collection"
path = "examples/full_dynamic_collection.rs"
required-features = ["2d", "3d", "dynamic_assets"]

[[example]]
name = "custom_dynamic_assets"
path = "examples/custom_dynamic_assets.rs"
