[package]
name = "bevy_asset_loader_derive"
version = "0.7.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macro implementation for #[derive(AssetCollection)]"
repository = "https://github.com/NiklasEi/bevy_asset_loader"
homepage = "https://github.com/NiklasEi/bevy_asset_loader"
documentation = "https://docs.rs/bevy_asset_loader_derive"
keywords = ["bevy", "gamedev", "asset", "assets"]
categories = ["game-development"]
readme = "../README.md"

[features]
render = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
