[package]
name = "bevy_asset_loader_derive"
version = "0.20.1"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macro implementation for bevy_asset_loader"
repository = "https://github.com/NiklasEi/bevy_asset_loader"
homepage = "https://github.com/NiklasEi/bevy_asset_loader"
documentation = "https://docs.rs/bevy_asset_loader_derive"
keywords = ["bevy", "gamedev", "asset", "assets"]
categories = ["game-development"]
rust-version = "1.74.0"
readme = "README.md"

[features]
2d = []
3d = []

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
