[package]
name = "bevy_asset_loader_dynamic"
version = "0.9.0-github.main"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Support dynamic assets in bevy_asset_loader"
repository = "https://github.com/NiklasEi/bevy_asset_loader"
homepage = "https://github.com/NiklasEi/bevy_asset_loader"
documentation = "https://docs.rs/bevy_asset_loader_dynamic"
keywords = ["bevy", "gamedev", "asset", "assets"]
categories = ["game-development"]
readme = "../README.md"

[features]
render = []

[dependencies]
