[package]
name = "bevy_assets_loader"
version = "0.1.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_assets_loader_derive = {path = "../bevy_assets_loader_derive"}

[dev-dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_kira_audio =  { version = "0.4.0", features = ["ogg"] }
